# stm32_cheat_sheets

./: Header_text_for_gpt.md  README.md
AT24C04/: at24c04.c  at24c04.h  readme.md
DHT22/: README.md  dht22.c  dht22.h
DS18B20/: README.md  ds18b20.c  ds18b20.h
DS3231/: README.md  ds3231.c  ds3231.h  ds3231_time_bridge.c  ds3231_time_bridge.h
DS3231/configure_clock/: ds3231_configure.c
DS3231/deprecated/: ds3231.c  ds3231.h  ds3231_time_bridge.c  ds3231_time_bridge.h
DS3231/simple/: ds3231_simple.c  ds3231_simple.h
DS3231/simple/PC_utils/: CMakeLists.txt
HDC1080/: HDC1080.c  HDC1080.h
SD_spi/: README.md  example.c  user_diskio_spi.c  user_diskio_spi.h
SN74HC595/: sn74hc595.c  sn74hc595.h
TDS-sensor/: Readme.md  tds_filter.c  tds_filter.h  tds_meter.c  tds_meter.h
button/: button.c  button.h  button_manager.c  button_manager.h  readme.md
gpio/: gpio.h
gpio_switch/: Readme.md  gpio_switch.c  gpio_switch.h
logging/: logging.c  logging.h
pH-sensor/: Readme.md  ph_adc_hal.c  ph_adc_hal.h  ph_sensor.c  ph_sensor.h  ph_sensor_calib.c  ph_sensor_calib.h
printf_uart/: printf_uart.c  printf_uart.h
sr04m/: Readme.md  sr04m.c  sr04m.h
systems/hydroponic_box/: hydroponic.c  hydroponic.h  hydroponic_storage.c  hydroponic_storage.h  readme.md
systems/led595/: led595.c  led595.h  readme.md  sn74hc595_chain.c  sn74hc595_chain.h
systems/nutrient_tank/: Readme.md  nutrient_tank.c  nutrient_tank.h  pump_guard.c  pump_guard.h  pump_unit.c  pump_unit.h  readme.md  recipe_controller.c  recipe_controller.h  tank_sensors.c  tank_sensors.h
(+6 files in other folders)
